# rust_weatherAPI_cli

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  index.html  styles.css
.github/workflows/: rust.yml
src/: api_client.rs  app.rs  cli.rs  main.rs  model.rs  weather_service.rs
src/components/: weather_display.rs
