[package]
name = "weather_cli_project"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dotenv = "0.15.0"
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"